SERVER-92668 Fix wrong result with SBE, hash index,  (#25289)

GitOrigin-RevId: 30fa4e581c2d15598ecaa5e8805df98f27b03858